force-app/main/default/objects/Time_Entry__c/Time_Entry__c.object-meta.xml
<CustomObject>
    <description>Stores each time entry pulled from external systems, along with calculated durations, worker details, and references to related Salesforce Cases.</description>
    <label>Time Entry</label>
    <nameField>
        <displayFormat>TE-{0000}</displayFormat>
        <label>Time Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>