force-app/main/default/objects/Time_Entry__c/fields/Calculated_Duration__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Duration__c</fullName>
    <description>The duration in hours between the start and end times</description>
    <formula>If(!ISBLANK( End_Time__c), (End_Time__c - Start_Time__c) * 24, NULL)</formula>
    <inlineHelpText>The duration in hours between the start and end times</inlineHelpText>
    <label>Calculated Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>