force-app/main/default/objects/Time_Entry__c/fields/Case_Code__c.field-meta.xml
<CustomField>
    <fullName>Case_Code__c</fullName>
    <label>Case Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>