force-app/main/default/objects/Time_Entry__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <description>The end time of the time entry</description>
    <inlineHelpText>The end time of the time entry</inlineHelpText>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>