force-app/main/default/objects/Time_Entry__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Used to capture any exceptions encountered while processing.</description>
    <label>Error Message</label>
    <type>TextArea</type>
</CustomField>