force-app/main/default/objects/Time_Entry__c/fields/External_Time_Entry_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Time_Entry_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Unique identifier for the time entry from the external system</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique identifier for the time entry from the external system</inlineHelpText>
    <label>External Time Entry ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>