force-app/main/default/objects/Time_Entry__c/fields/Job_Code__c.field-meta.xml
<CustomField>
    <fullName>Job_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Code</label>
    <referenceTo>Job_Code__c</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>Time_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>