force-app/main/default/objects/Time_Entry__c/fields/Job_Code_Id_txt__c.field-meta.xml
<CustomField>
    <fullName>Job_Code_Id_txt__c</fullName>
    <description>Stores the raw value of the time entry&apos;s internal Job Code identifier (e.g. in Rippling this is a 24-char string) to be used as a lookup key to connect Time Entry with parent Job Code record.</description>
    <label>Job Code Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>