force-app/main/default/objects/Time_Entry__c/fields/Manual_Duration__c.field-meta.xml
<CustomField>
    <fullName>Manual_Duration__c</fullName>
    <description>The manually entered time worked in hours when both Start Time and End Time are not provided</description>
    <inlineHelpText>The manually entered time worked in hours when both Start Time and End Time are not provided</inlineHelpText>
    <label>Manual Duration</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>