force-app/main/default/objects/Time_Entry__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>The start time of the time entry.</description>
    <inlineHelpText>The start time of the time entry.</inlineHelpText>
    <label>Start Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>