force-app/main/default/objects/Time_Entry__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Pulls any raw Status value from the time entry record in the source system</description>
    <label>Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>