force-app/main/default/objects/Time_Entry__c/fields/Time_Entry_Date__c.field-meta.xml
<CustomField>
    <fullName>Time_Entry_Date__c</fullName>
    <description>Official Date for this Time Entry. Generally derived from the date component of the End DateTime value</description>
    <label>Time Entry Date</label>
    <type>Date</type>
</CustomField>