force-app/main/default/objects/Time_Entry__c/fields/Time_Entry_Type__c.field-meta.xml
<CustomField>
    <fullName>Time_Entry_Type__c</fullName>
    <description>The system that is the source of the time entry</description>
    <inlineHelpText>The system that is the source of the time entry</inlineHelpText>
    <label>Time Entry Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Time_Entry_Integration_Systems</valueSetName>
    </valueSet>
</CustomField>