force-app/main/default/objects/Time_Entry__c/fields/Total_Duration__c.field-meta.xml
<CustomField>
    <fullName>Total_Duration__c</fullName>
    <description>The sum of the Calculated Duration and the Manual Duration</description>
    <formula>Manual_Duration__c +  Calculated_Duration__c</formula>
    <inlineHelpText>The sum of the Calculated Duration and the Manual Duration</inlineHelpText>
    <label>Total Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>