force-app/main/default/objects/Time_Entry__c/fields/Worker__c.field-meta.xml
<CustomField>
    <fullName>Worker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Worker</label>
    <referenceTo>Worker__c</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>Time_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>