force-app/main/default/objects/Time_Entry__c/fields/Worker_Id_txt__c.field-meta.xml
<CustomField>
    <fullName>Worker_Id_txt__c</fullName>
    <label>Worker Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>