force-app/main/default/objects/Time_Entry__c/validationRules/End_Time_Cannot_Be_Before_Start_Time.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Time_Cannot_Be_Before_Start_Time</fullName>
    <active>true</active>
    <description>The End Time Cannot Occur Before the Start Time</description>
    <errorConditionFormula>End_Time__c &lt;  Start_Time__c</errorConditionFormula>
    <errorDisplayField>End_Time__c</errorDisplayField>
    <errorMessage>The End Time Cannot Occur Before the Start Date</errorMessage>
</ValidationRule>