force-app/main/default/objects/Time_Entry__c/validationRules/Start_Time_Cannot_Be_After_End_Time.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Time_Cannot_Be_After_End_Time</fullName>
    <active>true</active>
    <description>The Start Time cannot occur after the End Time</description>
    <errorConditionFormula>Start_Time__c &gt; End_Time__c</errorConditionFormula>
    <errorDisplayField>Start_Time__c</errorDisplayField>
    <errorMessage>The Start Time cannot occur after the End Time</errorMessage>
</ValidationRule>